<resources>
    <string name="app_name">SEN QUIZ</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>

    <string name="username_cannot_empty">Username cannot be empty</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="old_password_cannot_be_empty">Old Password cannot be empty</string>
    <string name="new_password_cannot_be_empty">New Password cannot be empty</string>
    <string name="confirm_new_password_cannot_be_empty">Confirm New Password cannot be empty</string>
    <string name="password_must_be_same">Password must be same</string>
    <string name="new_password_must_be_different">New Password must be different</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="email_not_valid">Email must be valid</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="menu">Menu</string>
    <string name="quiz_option">Quiz Option</string>
    <string name="edit_password">Edit Password</string>
    <string name="logout">Logout</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="old_password">Old Password</string>
    <string name="create">Create</string>
    <string name="save_password">Save Password</string>
    <string name="literature">Literature</string>
    <string name="geography">Geography</string>
    <string name="math">Math</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="final_result">Final Result</string>
    <string name="subject">Subject :</string>
    <string name="correct">Correct :</string>
    <string name="incorrect">Incorrect :</string>
    <string name="earned">Earned :</string>
    <string name="total_questions">Total Questions :</string>
    <string name="overall_points">Overall Points :</string>
    <string name="math_quiz">Math Quiz</string>
    <string name="literature_quiz">Literature Quiz</string>
    <string name="geography_quiz">Geography Quiz</string>
    <string name="date">Date :</string>
    <string name="start_again">Start Again!</string>

    <string name="rules1_description">
        The Quiz will contain 5 randomized questions.
    </string>
    <string name="rules2_description">
        Every correct answer scores you 5 points.
    </string>
    <string name="rules3_description">
        Every wrong answer deduct you 2 points.
    </string>
    <string name="rules4_description">
        Your results will be saved and will be accumulated in your history.
    </string>

    <string name="version_app">version 1.0</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="make_quiz">Make Quiz</string>
    <string name="report">Progress Report</string>
    <string name="btn_start_title">Start</string>
    <string name="no_quiz">No Quiz</string>
    <string name="no_answer">No Answer</string>
    <string name="confirm_answer">Confirm Answer</string>

    <string name="title">Title</string>
    <string name="input_title">Input Title</string>
    <string name="question">Question</string>
    <string name="input_question">Input Question</string>
    <string name="answer">Answer</string>
    <string name="answer_image">Image</string>
    <string name="answer_text">Text</string>
    <string name="test_it">Test It</string>
    <string name="cancel">Cacel</string>
    <string name="save">Save</string>
    <string name="loading">Loading...</string>
    <string name="countdown">Count Down</string>
    <string name="input_countdown">Input Count Down</string>
    <string name="choices">Number of Choices</string>
    <string name="input_choices">Input Number of Choices</string>
    <string name="reward_timer">Reward Timer</string>
    <string name="input_reward_timer">Input Reward Timer</string>
    <string name="linear_system">Linear System</string>
    <string name="box1">Box 1</string>
    <string name="box2">Box 2</string>
    <string name="box3">Box 3</string>
    <string name="box4">Box 4</string>
    <string name="box5">Box 5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>