<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:theme="@style/Theme.QuizForFun">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ibDrawerOpen"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_drawer"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/cancelBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/cancel"
            android:textAppearance="@style/buttonTextStyle"
            app:layout_constraintEnd_toStartOf="@id/btnSave"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/smallBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/save"
            android:textAppearance="@style/buttonTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/buttonContainer"
        app:layout_constraintBottom_toTopOf="@id/btnTest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblTitle"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:background="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lblQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question"
                app:layout_constraintEnd_toEndOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintTop_toBottomOf="@id/txtTitle"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintTop_toBottomOf="@id/lblQuestion"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:background="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lblAnswer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintTop_toBottomOf="@id/txtQuestion"/>

            <LinearLayout
                android:id="@+id/answersLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@id/lblAnswer"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintEnd_toEndOf="@id/txtTitle"
                android:orientation="vertical">

                <include
                    layout="@layout/answer_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTest"
        style="@style/btnStyle"
        android:layout_width="0dp"
        android:layout_margin="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/test_it"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>