<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/bg_color"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:theme="@style/Theme.QuizForFun">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/ibDrawerOpen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_drawer"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintTop_toBottomOf="@id/buttonContainer"
            app:layout_constraintBottom_toTopOf="@id/btnSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="24dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.6" />

                <TextView
                    android:id="@+id/lblCountDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/countdown"
                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtCountDown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guidelineEnd"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCountDown"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:background="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblChoices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/choices"
                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txtChocies" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtChocies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guidelineEnd"
                    app:layout_constraintTop_toBottomOf="@id/txtCountDown">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtChoices"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:background="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblRewardTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/reward_timer"
                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txtRewardTimer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtRewardTimer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guidelineEnd"
                    app:layout_constraintTop_toBottomOf="@id/txtChocies">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtRewardTimer"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:background="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/group_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtRewardTimer" />

                <TextView
                    android:id="@+id/lblLinearSystem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/linear_system"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/group_divider" />

                <TextView
                    android:id="@+id/lblBox1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/box1"
                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txtBox1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtBox1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guidelineEnd"
                    app:layout_constraintTop_toBottomOf="@id/lblLinearSystem">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtBox1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:background="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblBox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/box2"
                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txtBox2" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtBox2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guidelineEnd"
                    app:layout_constraintTop_toBottomOf="@id/txtBox1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtBox2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:background="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblBox3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/box3"
                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txtBox3" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtBox3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guidelineEnd"
                    app:layout_constraintTop_toBottomOf="@id/txtBox2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtBox3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:background="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblBox4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/box4"
                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txtBox4" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtBox4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guidelineEnd"
                    app:layout_constraintTop_toBottomOf="@id/txtBox3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtBox4"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:background="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblBox5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/box5"
                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txtBox5" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtBox5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guidelineEnd"
                    app:layout_constraintTop_toBottomOf="@id/txtBox4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtBox5"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:background="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblBox6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtBox5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/btnStyle"
            android:layout_width="0dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="0dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnSave"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/btnStyle"
            android:layout_width="0dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="0dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/navigation_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>